--- a/index.html
+++ b/index.html
@@ -748,6 +748,9 @@
             <span class="sidebar--label">Git</span><br />
             <a href="https://github.com/xplore93">github.com/xplore93</a>
           </li>
+          <li class="sidebar--item sidebar--item-personal">
+            <img src="https://www.codewars.com/users/xplore93/badges/micro"></img>
+          </li>
         </ul>
       </div>
 
@@ -988,8 +991,8 @@
               programando desde que tenía 12 años. Inicialmente, eran simples
               scripts, páginas HTML puras y aplicaciones de consola. He
               desarrollado proyectos más complejos, como páginas web hechas con
-              frameworks o aplicaciones C/C++. Además, he trabajado con Docker
-              y Kubernetes para montar cluster con un servidor web y Grafana
+              frameworks o aplicaciones C/C++. Además, he trabajado con Docker y
+              Kubernetes para montar cluster con un servidor web y Grafana
               Dashboard para las métricas.
             </p>
           </div>
